Make /siteverify fully reCAPTCHA-compatible
